tests/NormalTests/paczka1/small_fuzzy/33417767.err
Error in line 2: qynK8 A492 90,0
Error in line 11: B4I8VXrl1H A492 11,0
